<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/git_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="15dp"
        android:src="@color/white"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/git_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/name"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/git_username"
        app:layout_constraintStart_toEndOf="@+id/git_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/git_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/txt_follower"
        app:layout_constraintStart_toEndOf="@+id/git_photo"
        app:layout_constraintTop_toBottomOf="@+id/git_name" />

    <TextView
        android:id="@+id/txt_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/follower"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/git_photo"
        app:layout_constraintTop_toBottomOf="@+id/git_username" />

    <TextView
        android:id="@+id/git_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/num"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_follower"
        app:layout_constraintTop_toBottomOf="@+id/git_username" />

    <TextView
        android:id="@+id/txt_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/following"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/git_follower"
        app:layout_constraintTop_toBottomOf="@+id/git_username" />

    <TextView
        android:id="@+id/git_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/num"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_following"
        app:layout_constraintTop_toBottomOf="@+id/git_username" />

</androidx.constraintlayout.widget.ConstraintLayout>